2013-05-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_debug_client.cpp:
	* rcsc/common/online_client.cpp:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	* rcsc/net/tcp_socket.cpp:
	* rcsc/net/tcp_socket.h:
	* rcsc/net/udp_socket.cpp:
	* rcsc/net/udp_socket.h:
	* rcsc/player/debug_client.cpp:
	- ソケット周りのコード整理．仮想関数のsend,receiveを廃止し，TCPと
	UDPでそれぞれ別メソッド名として定義する方針に変更

	* .gitignore:
	- 無視するファイルの整理

	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	- HostAddressクラスでソケットの実装を置き換え

2013-05-08  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/host_address.cpp:
	* rcsc/net/host_address.h:
	* rcsc/net/Makefile.am:
	- HostAddressクラスを追加．未テスト．

	* rcsc/net/Makefile.am:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/abstract_socket.h:
	* rcsc/net/tcp_socket.cpp:
	* rcsc/net/tcp_socket.h:
	* rcsc/net/udp_socket.cpp:
	* rcsc/net/udp_socket.h:
	* rcsc/net/basic_socket.cpp:
	* rcsc/net/abstract_socket.cpp:
	* rcsc/net/basic_socket.h:
	* rcsc/net/abstract_socket.h:
	- BasicSocketをAbstractSocketへリネーム

2013-05-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/basic_socket.cpp:
	* rcsc/net/basic_socket.h:
	- getPeerName()とgetPeerPort()を追加
	- UDPパケット受信時に接続先ポート番号だけでなくアドレスを全て上書きするように変更

2013-04-22  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/net/basic_socket.cpp:
	* rcsc/net/basic_socket.h:
	- typoを修正

2012-07-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.h:
	- BallObject::ghostCount()を追加

2012-06-21  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- ディフェンスライン推定の不具合修正．プレイヤごとに信頼性に基づ
	く移動見積もりを出していなかった

2012-06-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/Makefile.am:
	- 不足していたヘッダファイルを追加

	* rcsc/player/world_model.cpp:
	- オフサイドライン更新でプレイヤの移動量をめに見積るように変更

	* rcsc/Makefile.am:
	- 誤使用回避のために共有ライブラリバージョンを8に変更
